[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "jsonrpyc"
description = "Minimal python RPC implementation in a single file based on the JSON-RPC 2.0 specs from http://www.jsonrpc.org/specification."
authors = [
    {name = "Marcel Rieger", email = "github.riga@icloud.com"},
]
keywords = [
    "rpc",
    "json",
    "json-rpc",
    "jsonrpc",
    "2.0",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]


[project.urls]

Homepage = "https://github.com/riga/jsonrpyc"
Documentation = "https://jsonrpyc.readthedocs.io"
Repository = "https://github.com/riga/jsonrpyc.git"


[tool.setuptools.dynamic]

version = {attr = "jsonrpyc.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}}


[tool.setuptools]

include-package-data = false


[tool.setuptools.packages.find]

include = ["jsonrpyc"]
exclude = ["tests/*"]
